# mgdl

./: .gitignore  Cargo.toml  README.md  README.org  db.py  downloader.py  main.py  query.py  requirements.txt  scraper.py
src/: bench.rs  cli.rs  config.rs  db.rs  downloader.rs  error.rs  lib.rs  logger.rs  main.rs  maybe_progress.rs  models.rs  out.html  scrape.rs  utils.rs
src/logger/: maybe_progress.rs  mod.rs
src/scrape/: html.rs  mod.rs
tests/: test_db.rs  test_live.rs  test_models.rs  test_scrape.rs  test_utils.rs
tests/common/: mod.rs
tests/common/fixtures/: chapter_list.html  chapter_pages.html  manga_page.html
