[package]
name = "mgdl"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
directories = "6.0"
toml = "0.8.20"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.30", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
uuid = { version = "1.13.2", features = ["v4"] }
dirs = "6.0.0"
