[package]
name = "mgdl"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
directories = "6.0"
toml = "0.8.20"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.30", features = ["derive"] }
reqwest = { version = "0.12.12" }
tokio = { version = "1", features = ["full"] }
scraper = "0.23.1"
indicatif = "0.17.11"
uuid = { version = "1.4", features = ["v4"] }
csv = "1.4.0"

[dev-dependencies]
tempfile = "3"
